force-app/main/default/objects/Receiving_Line__c/Receiving_Line__c.object-meta.xml
<CustomObject>
    <label>Receiving Line</label>
    <nameField>
        <displayFormat>RELI-{0000000000}</displayFormat>
        <label>Receiving Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receiving Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>