force-app/main/default/objects/Receiving_Line__c/fields/Cases_Received__c.field-meta.xml
<CustomField>
    <fullName>Cases_Received__c</fullName>
    <formula>Total_Received_Qty__c /   Product_Name__r.MOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>