force-app/main/default/objects/Receiving_Line__c/fields/Harvest_Batch_or_Lot_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_or_Lot_Code__c</fullName>
    <label>Del_Harvest Batch or Lot Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>