force-app/main/default/objects/Receiving_Line__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>