force-app/main/default/objects/Receiving_Line__c/fields/PO_Qty__c.field-meta.xml
<CustomField>
    <fullName>PO_Qty__c</fullName>
    <formula>Qty_to_Receive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>