force-app/main/default/objects/Receiving_Line__c/fields/PO_Qty_Vs_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>PO_Qty_Vs_Received_Qty__c</fullName>
    <formula>PO_Qty__c - Total_Received_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Qty Vs Received Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>