force-app/main/default/objects/Receiving_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>