force-app/main/default/objects/Receiving_Line__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <label>Purchase Order Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Order_Line__c.Receiving__r.Purchase_Order__c</field>
            <operation>equals</operation>
            <valueField>Purchase_Order_Line__c.Receiving__r.Purchase_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>