force-app/main/default/objects/Receiving_Line__c/fields/QA_Hold__c.field-meta.xml
<CustomField>
    <fullName>QA_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Hold</label>
    <type>Checkbox</type>
</CustomField>