force-app/main/default/objects/Receiving_Line__c/fields/Qty_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Qty_to_Receive__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty to Receive</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>