force-app/main/default/objects/Receiving_Line__c/fields/Receiving_ID__c.field-meta.xml
<CustomField>
    <fullName>Receiving_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving ID</label>
    <referenceTo>Receiving__c</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>