force-app/main/default/objects/Receiving_Line__c/fields/Receiving_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Line_Status__c</fullName>
    <label>Receiving Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Partially Received</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>