force-app/main/default/objects/Receiving_Line__c/fields/Receiving_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Line_Value__c</fullName>
    <formula>Unit_Cost__c *   Total_Received_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiving Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>