force-app/main/default/objects/Receiving_Line__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>