force-app/main/default/objects/Receiving_Line__c/fields/Total_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Qty__c</fullName>
    <inlineHelpText>Total Inventory Qty from Inventory Position</inlineHelpText>
    <label>Received Qty</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>