force-app/main/default/objects/Receiving_Line__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Receiving Lines</relationshipLabel>
    <relationshipName>Receiving_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>