force-app/main/default/objects/Receiving_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>UID__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Inventory_Location__c</columns>
    <columns>Producer_Name__c</columns>
    <columns>Qty_to_Receive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>