force-app/main/default/objects/Receiving_Line__c/listViews/COA_Transfer.listView-meta.xml
<ListView>
    <fullName>COA_Transfer</fullName>
    <columns>NAME</columns>
    <columns>Ownership__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Receiving_ID__c</columns>
    <columns>Harvest_Batch_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lab_Test_Status__c</field>
        <operation>equals</operation>
        <value>COA Transfer</value>
    </filters>
    <label>COA Transfer</label>
    <sharedTo>
        <group>Filigreen_Admin_Users</group>
    </sharedTo>
</ListView>